# moamosaic

./: .flake8  CreateRelease.txt  LICENSE  Notes_mosaicScheme.txt  README.md  asyncplay.py  procCopy.py  procInfo.py  procQueTiming.py  pyproject.toml  simpletiming.py  utils.py
.github/workflows/: docs.yml
datasets/: makeMosaicInputs.py  plotstats.py  rungdalmergetiming.py  runmoatests.py  searchStac.py
doc/: buildDoc.py  cmdline.md  cmdline.md.template  index.md  performance.md
doc/api/moamosaic/: monitoring.html  reproj.html
doc/source/: conf.py  index.rst
docs/: buildDoc.py  cmdline.md  index.md  performance.md  releasenotes.md
docs/api/: index.html  moamosaic.html
docs/api/moamosaic/: monitoring.html  mosaic.html  reproj.html  structures.html  tests.html
exploratory/: Notes_mosaicScheme.txt  asyncplay.py  procCopy.py  procInfo.py  procQueTiming.py  simpletiming.py
moa/: moamosaic.py  monitoring.py
moamosaic/: __init__.py  monitoring.py  mosaic.py  reproj.py  structures.py  tests.py
timingtests/: 56JPQ-3X3.2022.stacresults.json  56JPQ-3X3.2023.stacresults.json  gdalmerge.timing.2022.json  moa.timing.2023.json  moa.timing.cpu2.t1-10.json  moa.timing.cpu4.t1-10.json  plotstats.py  rungdalmergetiming.py  runmoatiming.py  searchStac.py
