[build-system]
requires = ["setuptools"]

[project]
name = "moamosaic"
dynamic = ["version"]
authors = [
  {name = "Neil Flood"}
]
description = "Multi-threaded raster mosaicing tool"
readme = "README.md"
license = {text = "MIT License"}

[project.scripts]
moamosaic = "moamosaic.mosaic:mainCmd"
test_moamosaic = "moamosaic.tests:mainCmd"

[tool.setuptools]
packages = ["moamosaic"]

[tool.setuptools.dynamic]
version = {attr = "moamosaic.__version__"}

[project.urls]
Repository = "https://github.com/ubarsc/moamosaic.git"
