# The installation requires pip>=23.0. If not, it will fail in rather
# cryptic ways (depending exactly what options are used).
#

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moamosaic"
dynamic = ["version"]
authors = [
  {name = "Neil Flood"}
]
description = "Multi-threaded raster mosaicing tool"
readme = "README.md"
license = {text = "MIT License"}

[project.scripts]
moamosaic = "moamosaic.mosaic:mainCmd"
test_moamosaic = "moamosaic.tests:mainCmd"

[tool.setuptools]
packages = ["moamosaic"]

[tool.setuptools.dynamic]
version = {attr = "moamosaic.__version__"}

[project.urls]
Repository = "https://github.com/ubarsc/moamosaic.git"
